// Copyright (C) 2024 Declan Teevan
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package stocklet.events.v1;

option go_package = "github.com/hexolan/stocklet/internal/pkg/protogen/events/v1;events_v1";

message ProductCreatedEvent {
  int32 revision = 1;

  string product_id = 2;
  string name = 3;
  string description = 4;
  float price = 5;
}

message ProductPriceUpdatedEvent {
  int32 revision = 1;

  string product_id = 2;
  float price = 3;
}

message ProductDeletedEvent {
  int32 revision = 1;

  string product_id = 2;
}

message ProductPriceQuoteEvent {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_UNAVAILABLE = 1;
    TYPE_AVAILABLE = 2;
  }

  int32 revision = 1;
  Type type = 2;

  string order_id = 3;

  // Product ID: Quantity
  map<string, int32> product_quantities = 4;

  // Product ID: Unit Price
  map<string, float> product_prices = 5;

  float total_price = 6;
}
